tests/syntax_error/bad_union_member_name.jou
class Foo:
    union:
        1: int  # Error: expected a union member, got an integer
